k8s/Guests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guests
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guests
  template:
    metadata:
      labels:
        app: guests
    spec:
      containers:
        - image: guests-service:2
          imagePullPolicy: Never
          name: guests
          ports:
            - containerPort: 8080
